--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
